--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,33 @@
 ---
+
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { GraphQLClient } from "graphql-request";
+import type { Pages } from '../types/page';
+
+const client = new GraphQLClient(import.meta.env.ASTRO_HYGRAPH_ENDPOINT);
+
+// Fetch the data via the GraphQL query
+const { pages }: Pages = await client.request(`
+  query Pages {
+    pages {
+      title
+      slug
+      publishedAt
+      updatedAt
+      heroImage {
+        id
+        url
+        mimeType
+      }
+      body {
+        text
+      }
+    }
+  }
+`);
 ---
 
 <!doctype html>
@@ -12,8 +37,19 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
+		
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			{
+        pages.map((page: any) => {
+          return (
+            <li>
+              <a href={`/page/${page.slug}`} class="underline">
+                {page.title}
+              </a>
+            </li>
+          );
+        })
+      }
 			<p>
 				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
 				template serves as a lightweight, minimally-styled starting point for anyone looking to build
