--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
+import BaseHead from '../components/BaseHead.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
+import { GraphQLClient } from 'graphql-request'
+import type { Pages, HeroImage } from '../types/page'
 
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import { GraphQLClient } from "graphql-request";
-import type { Pages } from '../types/page';
-
-const client = new GraphQLClient(import.meta.env.ASTRO_HYGRAPH_ENDPOINT);
+const client = new GraphQLClient(import.meta.env.ASTRO_HYGRAPH_ENDPOINT)
 
 // Fetch the data via the GraphQL query
 const { pages }: Pages = await client.request(`
@@ -27,60 +26,74 @@ const { pages }: Pages = await client.request(`
       }
     }
   }
-`);
+`)
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header />
-		
-		<main>
-			{
+<html lang='en'>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <Header />
+
+    <main>
+      {
         pages.map((page: any) => {
           return (
             <li>
-              <a href={`/page/${page.slug}`} class="underline">
+              <a href={`/page/${page.slug}`} class='underline'>
                 {page.title}
               </a>
             </li>
-          );
+          )
         })
       }
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
+      <p>
+        Welcome to the official <a href='https://astro.build/'>Astro</a> blog starter
+        template. This template serves as a lightweight, minimally-styled starting
+        point for anyone looking to build a personal website, blog, or portfolio
+        with Astro.
+      </p>
+      <p>
+        This template comes with a few integrations already configured in your
+        <code>astro.config.mjs</code> file. You can customize your setup with
+        <a href='https://astro.build/integrations'>Astro Integrations</a> to add
+        tools like Tailwind, React, or Vue to your project.
+      </p>
+      <p>Here are a few ideas on how to get started with the template:</p>
+      <ul>
+        <li>Edit this page in <code>src/pages/index.astro</code></li>
+        <li>
+          Edit the site header items in <code>src/components/Header.astro</code>
+        </li>
+        <li>
+          Add your name to the footer in <code>src/components/Footer.astro</code
+          >
+        </li>
+        <li>
+          Check out the included blog posts in <code>src/content/blog/</code>
+        </li>
+        <li>
+          Customize the blog post page layout in <code
+            >src/layouts/BlogPost.astro</code
+          >
+        </li>
+      </ul>
+      <p>
+        Have fun! If you get stuck, remember to <a
+          href='https://docs.astro.build/'
+          >read the docs
+        </a> or <a href='https://astro.build/chat'>join us on Discord</a> to ask
+        questions.
+      </p>
+      <p>
+        Looking for a blog template with a bit more personality? Check out <a
+          href='https://github.com/Charca/astro-blog-template'
+          >astro-blog-template
+        </a> by <a href='https://twitter.com/Charca'>Maxi Ferreira</a>.
+      </p>
+    </main>
+    <Footer />
+  </body>
 </html>
