--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import { GraphQLClient } from 'graphql-request'
-import type { Pages, HeroImage } from '../types/page'
+import type { Pages } from '../types/page'
 
 const client = new GraphQLClient(import.meta.env.ASTRO_HYGRAPH_ENDPOINT)
 
