--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,11 +7,17 @@ interface Props {
   title: string
   description: string
   image?: string
+  keywords?: string
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props
+const {
+  title,
+  description,
+  image = '/blog-placeholder-1.jpg',
+  keywords
+} = Astro.props
 ---
 
 <!-- Global Metadata -->
@@ -43,6 +49,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props
 <title>{title}</title>
 <meta name='title' content={title} />
 <meta name='description' content={description} />
+{keywords && <meta name='keywords' content={keywords} />}
 
 <!-- Open Graph / Facebook -->
 <meta property='og:type' content='website' />
