--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import '../styles/global.css'
+import '../styles/global.css';
 
 interface Props {
   title: string
@@ -10,14 +10,14 @@ interface Props {
   keywords?: string
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const {
   title,
   description,
   image = '/blog-placeholder-1.jpg',
   keywords
-} = Astro.props
+} = Astro.props;
 ---
 
 <!-- Global Metadata -->
