--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -1,16 +1,16 @@
 ---
-import type { ImageMetadata } from 'astro'
-import { getImage } from 'astro:assets'
+import type { ImageMetadata } from 'astro';
+import { getImage } from 'astro:assets';
 
 interface Props {
   src: string | ImageMetadata
   alt: string
 }
 
-const { src, alt } = Astro.props
+const { src, alt } = Astro.props;
 
-const mobileImg = await getImage({ src: src, format: 'webp', inferSize: true })
-const desktopImg = await getImage({ src: src, format: 'webp', inferSize: true })
+const mobileImg = await getImage({ src: src, format: 'webp', inferSize: true });
+const desktopImg = await getImage({ src: src, format: 'webp', inferSize: true });
 ---
 
 <picture>
