--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,17 +1,17 @@
 ---
-import BaseHead from '../components/BaseHead.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
+import BaseHead from '../components/BaseHead.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
-import type { Page } from '../types/page'
+import type { Page } from '../types/page';
 type Props = Page
 
-const { title, publishedAt, updatedAt, heroImage } = Astro.props
+const { title, publishedAt, updatedAt, heroImage } = Astro.props;
 
 // Convert string dates to Date objects
-const publishedDate = publishedAt ? new Date(publishedAt) : null
-const updatedDate = updatedAt ? new Date(updatedAt) : null
-console.log(updatedDate)
+const publishedDate = publishedAt ? new Date(publishedAt) : null;
+const updatedDate = updatedAt ? new Date(updatedAt) : null;
+console.log(updatedDate);
 ---
 
 <html lang='en'>
