--- a/src/components/PageContent.astro
+++ b/src/components/PageContent.astro
@@ -1,6 +1,6 @@
 ---
 import VideoGrid from './VideoGrid.astro';
-import type { Page } from '@domain/page';
+import type { Page } from '@sferg989/astro-utils';
 
 interface Props {
   page: Page;
