--- a/src/components/VideoGrid.astro
+++ b/src/components/VideoGrid.astro
@@ -1,5 +1,5 @@
 ---
-import type { DigitalAsset } from '../types/page';
+import type { DigitalAsset } from '@sferg989/astro-utils';
 
 interface Props {
   videos: DigitalAsset[];
