--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import type { Page } from '../types/page';
+import type { Page } from '@sferg989/astro-utils';
 
 type Props = Page;
 const { title, publishedAt, updatedAt, heroImage } = Astro.props;
